--- a/themes/ananke/i18n/bg.toml
+++ b/themes/ananke/i18n/bg.toml
@@ -32,7 +32,7 @@ other = "Задължително е да предоставите адрес н
 other = "Изпрати"
 
 [taxonomyPageList]
-other = "Below you will find pages that utilize the taxonomy term “{{ .Title }}”"
+other = "Below you will find pages that are tagged “{{ .Title }}”"
 
 [pageTitle]
 other = "{{ .Name }} страница"
