--- a/themes/ananke/i18n/nl.toml
+++ b/themes/ananke/i18n/nl.toml
@@ -32,7 +32,7 @@ other = "Een e-mailadres is vereist."
 other = "Stuur"
 
 [taxonomyPageList]
-other = "Below you will find pages that utilize the taxonomy term “{{ .Title }}”"
+other = "Below you will find pages that are tagged “{{ .Title }}”"
 
 [pageTitle]
 other = "{{ .Name }} pagina"
