--- a/themes/ananke/i18n/no.toml
+++ b/themes/ananke/i18n/no.toml
@@ -35,7 +35,7 @@ other = "E-postadresse er påkrevd"
 other = "Send"
 
 [taxonomyPageList]
-other = "Below you will find pages that utilize the taxonomy term “{{ .Title }}”"
+other = "Below you will find pages that are tagged “{{ .Title }}”"
 
 [pageTitle]
 other = "{{ .Name }} side"
