--- a/themes/ananke/i18n/uk.toml
+++ b/themes/ananke/i18n/uk.toml
@@ -32,7 +32,7 @@ other = "Електронна пошта обов'язкова"
 other = "Надіслати"
 
 [taxonomyPageList]
-other = "Below you will find pages that utilize the taxonomy term “{{ .Title }}”"
+other = "Below you will find pages that are tagged “{{ .Title }}”"
 
 [pageTitle]
 other = "{{ .Name }} сторінки"
